# Mirrorscope

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/dap/: Cargo.toml
crates/dap/src/: backend.rs  lib.rs  protocol.rs  replay_backend.rs  server.rs  stub.rs  transport.rs
crates/dap/tests/: backend_protocol.rs  dap_session.rs  replay_backend.rs
crates/decoder/: Cargo.toml
crates/decoder/src/: decoder_trait.rs  error.rs  lib.rs  native.rs  process_view.rs  ptrace_view.rs  registry.rs
crates/decoder/src/async_rust/: decode.rs  decoder.rs  dwarf.rs  error.rs  layout.rs  mod.rs  roots.rs  rustc_version.rs  state.rs
crates/decoder/src/async_rust/enumerate/: dwarf.rs  error.rs  layout.rs  mod.rs  tls.rs  walk.rs
crates/decoder/src/go/: decoder.rs  dwarf.rs  error.rs  gwalk.rs  mod.rs  offsets.rs  status.rs  version.rs
crates/decoder/src/model/: frame.rs  ids.rs  mod.rs  task.rs  timeline.rs  tree.rs  variable.rs  wake.rs
crates/decoder/tests/: goroutine_decoder.rs  native_decoder.rs  ptrace_process_view.rs  tokio_decoder.rs
crates/mirrorscope-cli/: Cargo.toml
crates/mirrorscope-cli/src/: main.rs
crates/recorder/: Cargo.toml
crates/recorder-ebpf/: Cargo.toml
crates/recorder-ebpf-common/: Cargo.toml
crates/recorder-ebpf-common/src/: lib.rs
crates/recorder-ebpf-programs/: Cargo.toml  README.md  rust-toolchain.toml
crates/recorder-ebpf-programs/src/: main.rs
crates/recorder-ebpf/src/: capture.rs  error.rs  lib.rs
crates/recorder-ebpf/tests/: ebpf_capture.rs
crates/recorder/src/: lib.rs
crates/recorder/src/capture/: affinity.rs  error.rs  mod.rs  payload.rs  ptrace.rs  sched.rs  syscall.rs  timer.rs
crates/recorder/src/trace/: format.rs  mod.rs  reader.rs  writer.rs
crates/recorder/tests/: multithread_capture.rs  ptrace_capture.rs  trace_roundtrip.rs
crates/replay/: Cargo.toml
crates/replay/src/: checkpoint.rs  checkpoint_select.rs  error.rs  inject.rs  lib.rs  mt.rs  regs.rs  scan.rs  schedule.rs  session.rs  watchpoint.rs  watchpoint_hw.rs
crates/replay/tests/: checkpoint.rs  inject.rs  multithread_replay.rs  watchpoint.rs
crates/unwind/: Cargo.toml
crates/unwind/src/: elf.rs  lib.rs  maps.rs  memory.rs  remote.rs  symbolize.rs  unwinder.rs
crates/unwind/tests/: remote_unwind.rs  self_unwind.rs
