[workspace]
resolver = "2"
members = [
    "crates/recorder",
    "crates/replay",
    "crates/unwind",
    "crates/decoder",
    "crates/dap",
    "crates/mirrorscope-cli",
    "crates/recorder-ebpf-common",
    "crates/recorder-ebpf",
]
# The BPF kernel-side program crate is a *separate* Cargo project (its own
# rust-toolchain.toml pinning nightly + bpf-linker), deliberately excluded
# from this workspace: `cargo build --workspace` on this MSRV-1.85 stable
# toolchain must never try to build it. See crates/recorder-ebpf-programs/README.md
# for its standalone build instructions (issue #14).
exclude = ["crates/recorder-ebpf-programs"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chayan-bit/Mirrorscope"
rust-version = "1.85"

[workspace.dependencies]
recorder = { path = "crates/recorder" }
replay = { path = "crates/replay" }
unwind = { path = "crates/unwind" }
decoder = { path = "crates/decoder" }
dap = { path = "crates/dap" }
recorder-ebpf = { path = "crates/recorder-ebpf" }
recorder-ebpf-common = { path = "crates/recorder-ebpf-common" }
crc32fast = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# eBPF userspace loader (issue #14). aya 0.13.2+/0.14 bump their MSRV to
# 1.87, past this workspace's 1.85 pin, so we stay on the last 0.13.x release
# that supports 1.85 (verified: `cargo install`/build under rustc 1.85.1
# rejects 0.13.2+ and 0.14 with "requires rustc 1.87.0"). aya's userspace
# crate is plain std Rust and builds with the stable MSRV-1.85 toolchain like
# the rest of the workspace — only the BPF kernel-side program
# (recorder-ebpf-programs, excluded above) needs nightly + bpf-linker, and
# pins its own aya-ebpf/aya-log-ebpf versions independently (see that crate's
# Cargo.toml) since object-file wire compatibility is what has to line up
# with this version, not MSRV.
aya = "=0.13.1"
aya-log = "=0.2.1"
# Unwinding + symbolization stack (issue #7).
# Pinned for MSRV 1.85: framehop 0.16 pulls gimli 0.33 which requires rustc
# 1.88, so we stay on the 0.15 line (gimli 0.32, MSRV 1.60) — same public API.
# addr2line 0.24 (MSRV 1.65) drives symbolization and transitively uses
# object 0.36, so we read ELF sections with the matching object 0.36 to keep a
# single object/gimli version in the tree.
framehop = "0.15"
object = { version = "0.36", default-features = false, features = ["read", "std"] }
addr2line = "0.24"
# DWARF reader for the Go decoder's runtime-offset resolution (issue #23).
# Pinned to the 0.31 line so it shares addr2line 0.24's gimli in the tree
# rather than adding a third gimli version.
gimli = { version = "0.31", default-features = false, features = ["read", "std"] }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
