[package]
name = "decoder"
description = "Layer 3: SemanticDecoder trait — language plugins reconstruct logical concurrency structure"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
unwind = { workspace = true }
nix = { version = "0.29", features = ["process", "uio"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
nix = { version = "0.29", features = ["ptrace", "signal", "process", "uio"] }
libc = "0.2"

[lints]
workspace = true
