[package]
name = "mirrorscope-cli"
description = "Mirrorscope command-line entry point (record / replay / DAP server)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mirrorscope"
path = "src/main.rs"

[features]
# Behind a feature, not the default: pulls in aya (Linux-only, needs root +
# BTF to actually load anything at runtime). See crates/recorder-ebpf and
# issue #14. Default `cargo build --workspace` is unaffected.
ebpf = ["dep:recorder-ebpf"]

[dependencies]
recorder.workspace = true
replay.workspace = true
dap.workspace = true
recorder-ebpf = { workspace = true, optional = true }

[lints]
workspace = true
