[package]
name = "recorder-ebpf-common"
description = "Wire format shared by the eBPF kernel-side syscall program and its userspace loader (issue #14)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

[lints]
workspace = true
