[package]
name = "recorder"
description = "Layer 1: recording — capture backends and the append-only trace log"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crc32fast.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["ptrace", "signal", "process", "uio"] }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dev-dependencies]
libc = "0.2"

[lints]
workspace = true
