[package]
name = "replay"
description = "Layer 2: replay execution engine — checkpoint restore + deterministic re-run"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
recorder.workspace = true

[lints]
workspace = true
