[package]
name = "replay"
description = "Layer 2: replay execution engine — checkpoint restore + deterministic re-run"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
recorder.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["ptrace", "signal", "process", "uio"] }
libc = "0.2"

[lints]
workspace = true
