[package]
name = "unwind"
description = "Layer 5: DWARF stack unwinding (framehop) + symbolization (addr2line) over abstract memory access"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
framehop.workspace = true
object.workspace = true
addr2line.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["ptrace", "signal", "process", "uio"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
libc = "0.2"

[lints]
workspace = true
